--- a/myihk/build.gradle
+++ b/myihk/build.gradle
@@ -15,7 +15,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         ndk {
-            abiFilters /*'arm64-v8a',*/ 'armeabi-v7a' /*, 'armeabi'*/
+            abiFilters 'arm64-v8a', 'armeabi-v7a' /*, 'armeabi'*/
         }
     }
 
